[package]
name = "beava-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beava v2 server — single-binary real-time feature server (fraud, ad-tech, analytics)."

[features]
default = []
testing = ["dep:reqwest"]

[[bin]]
name = "beava"
path = "src/main.rs"

[[bin]]
name = "log_probe"
path = "src/bin/log_probe.rs"
required-features = []

[[test]]
name = "foundation_smoke"
path = "tests/foundation_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_smoke"
path = "tests/phase2_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_5_smoke"
path = "tests/phase2_5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase4_smoke"
path = "tests/phase4_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_smoke"
path = "tests/phase5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_harness_smoke"
path = "tests/phase5_5_harness_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_baselines_smoke"
path = "tests/phase5_5_baselines_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase6_push"
path = "tests/phase6_push.rs"
required-features = ["testing"]

[[test]]
name = "phase6_crash"
path = "tests/phase6_crash.rs"
required-features = ["testing"]

[[test]]
name = "phase6_smoke"
path = "tests/phase6_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_smoke"
path = "tests/phase7_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_5_test_server_reproducer"
path = "tests/phase7_5_test_server_reproducer.rs"
required-features = ["testing"]

[[test]]
name = "phase7_restart_cycle"
path = "tests/phase7_restart_cycle.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_glue"
path = "tests/phase18_01_glue.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_bind_v18"
path = "tests/phase18_01_bind_v18.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_samply_gate"
path = "tests/phase18_01_samply_gate.rs"

[[test]]
name = "phase18_02_durability_watermarks_test"
path = "tests/phase18_02_durability_watermarks_test.rs"

[[test]]
name = "phase18_02_pingpong_test"
path = "tests/phase18_02_pingpong_test.rs"

[[test]]
name = "phase18_02_inline_wal_test"
path = "tests/phase18_02_inline_wal_test.rs"

[[test]]
name = "phase18_07_no_tokio_dataplane_test"
path = "tests/phase18_07_no_tokio_dataplane_test.rs"

[[test]]
name = "phase18_07_push_and_get_test"
path = "tests/phase18_07_push_and_get_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_07_upsert_delete_rename_test"
path = "tests/phase18_07_upsert_delete_rename_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_04_6_integration_test"
path = "tests/phase18_04_6_integration_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_09_msgpack_tcp_test"
path = "tests/phase18_09_msgpack_tcp_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_09_http_direct_row_test"
path = "tests/phase18_09_http_direct_row_test.rs"

[[test]]
name = "phase18_10_parse_optimization_test"
path = "tests/phase18_10_parse_optimization_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_11_hot_path_test"
path = "tests/phase18_11_hot_path_test.rs"

[[test]]
name = "phase18_05_continuous_workers_test"
path = "tests/phase18_05_continuous_workers_test.rs"

[[test]]
name = "wal_env_var_tunables"
path = "tests/wal_env_var_tunables.rs"

# ─── Plan 12-07 — read path on mio (HTTP + TCP) ─────────────────────────────
[[test]]
name = "phase12_07_tcp_get_test"
path = "tests/phase12_07_tcp_get_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_dispatch_batch_test"
path = "tests/phase12_07_dispatch_batch_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_health_on_mio_test"
path = "tests/phase12_07_health_on_mio_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_main_uses_v18_test"
path = "tests/phase12_07_main_uses_v18_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_get_via_mio_test"
path = "tests/phase12_07_get_via_mio_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_read_your_writes_test"
path = "tests/phase12_07_read_your_writes_test.rs"
required-features = ["testing"]

# ─── Plan 12-08 — apply-loop overhead reduction ─────────────────────────────
[[test]]
name = "phase12_08_busy_poll_test"
path = "tests/phase12_08_busy_poll_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_08_drain_until_empty_test"
path = "tests/phase12_08_drain_until_empty_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_08_response_batch_test"
path = "tests/phase12_08_response_batch_test.rs"
required-features = ["testing"]

[[bin]]
name = "phase6_crash_probe"
path = "src/bin/phase6_crash_probe.rs"

[lib]
name = "beava_server"
path = "src/lib.rs"

[dependencies]
beava-core = { path = "../beava-core" }
beava-persistence = { path = "../beava-persistence" }
beava-runtime-core = { path = "../beava-runtime-core" }
mio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.5"
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
# Plan 18-11: hot-path optimization deps (CompactString in match arms / row construction).
compact_str = { workspace = true }
smallvec = { workspace = true }
# Plan 18-06 follow-up: fast HashMap for event_id_index (was std::HashMap with SipHash).
hashbrown = { workspace = true }
fxhash = { workspace = true }
# Plan 18-13: bounded MPSC channel between IoPool worker threads (Senders) and
# the apply thread (Receiver). Replaces the per-tick `MioClient.parsed_requests`
# Vec batch publish + `IoPool::join_all` spin barrier with continuous event flow.
crossbeam-channel = "0.5"
# Plan 12-08 (D-A): pthread_self() on the apply thread for per-thread CPU
# accounting (test hooks); pthread_mach_thread_np / pthread_getcpuclockid in
# tests for actual CPU sampling.
libc = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
beava-runtime-core = { path = "../beava-runtime-core" }
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "signal", "time", "sync", "test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "phase25_wire"
harness = false

[[bench]]
name = "phase12_07_read_path"
harness = false
required-features = ["testing"]
