[package]
name = "beava-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Beava v2 server — single-binary real-time feature server (fraud, ad-tech, analytics)."

[features]
default = []
testing = ["dep:reqwest", "dep:tempfile"]
# `dev-tools` gates dev-only artifacts (log_probe binary, logging_smoke
# test) so they don't leak into the maturin-built `pip install beava`
# wheel, which would otherwise place a `log_probe` binary on the user's
# PATH alongside `beava`. CI gates run `--features testing,dev-tools`
# to keep the smoke test in coverage; production wheel builds do not.
dev-tools = []

[[bin]]
name = "beava"
path = "src/main.rs"

[[bin]]
name = "log_probe"
path = "src/bin/log_probe.rs"
required-features = ["dev-tools"]

[[test]]
name = "logging_smoke"
path = "tests/logging_smoke.rs"
required-features = ["dev-tools"]

[[test]]
name = "foundation_smoke"
path = "tests/foundation_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_smoke"
path = "tests/phase2_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase2_5_smoke"
path = "tests/phase2_5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase4_smoke"
path = "tests/phase4_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_smoke"
path = "tests/phase5_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_harness_smoke"
path = "tests/phase5_5_harness_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase5_5_baselines_smoke"
path = "tests/phase5_5_baselines_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase6_push"
path = "tests/phase6_push.rs"
required-features = ["testing"]

[[test]]
name = "phase6_smoke"
path = "tests/phase6_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_smoke"
path = "tests/phase7_smoke.rs"
required-features = ["testing"]

[[test]]
name = "phase7_5_test_server_reproducer"
path = "tests/phase7_5_test_server_reproducer.rs"
required-features = ["testing"]

[[test]]
name = "phase7_restart_cycle"
path = "tests/phase7_restart_cycle.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_bind_v18"
path = "tests/phase18_01_bind_v18.rs"
required-features = ["testing"]

[[test]]
name = "phase18_01_samply_gate"
path = "tests/phase18_01_samply_gate.rs"

[[test]]
name = "phase18_02_durability_watermarks_test"
path = "tests/phase18_02_durability_watermarks_test.rs"

[[test]]
name = "phase18_02_pingpong_test"
path = "tests/phase18_02_pingpong_test.rs"

[[test]]
name = "phase18_02_inline_wal_test"
path = "tests/phase18_02_inline_wal_test.rs"

[[test]]
name = "phase18_07_no_tokio_dataplane_test"
path = "tests/phase18_07_no_tokio_dataplane_test.rs"

# Plan 12.7-06: phase18_07_upsert_delete_rename_test deleted per
# `project_v0_events_only_scope` (locked 2026-04-30); the upsert/delete
# surface (table semantics) is removed from v0.

[[test]]
name = "phase18_04_6_integration_test"
path = "tests/phase18_04_6_integration_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_09_msgpack_tcp_test"
path = "tests/phase18_09_msgpack_tcp_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_09_http_direct_row_test"
path = "tests/phase18_09_http_direct_row_test.rs"

[[test]]
name = "phase18_10_parse_optimization_test"
path = "tests/phase18_10_parse_optimization_test.rs"
required-features = ["testing"]

[[test]]
name = "phase18_11_hot_path_test"
path = "tests/phase18_11_hot_path_test.rs"

[[test]]
name = "phase18_05_continuous_workers_test"
path = "tests/phase18_05_continuous_workers_test.rs"

# Phase 13.5.3: `wal_env_var_tunables` test target deleted; assertions
# moved to `crates/beava-server/src/server.rs::env_var_plumbing_tests`
# (unit tests inside src/, where the architectural tripwire
# `phase13_5_3_no_env_var_pokes_in_tests.rs` does not walk).

# ─── Plan 12-07 — read path on mio (HTTP + TCP) ─────────────────────────────
[[test]]
name = "phase12_07_tcp_get_test"
path = "tests/phase12_07_tcp_get_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_dispatch_batch_test"
path = "tests/phase12_07_dispatch_batch_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_health_on_mio_test"
path = "tests/phase12_07_health_on_mio_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_main_uses_v18_test"
path = "tests/phase12_07_main_uses_v18_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_get_via_mio_test"
path = "tests/phase12_07_get_via_mio_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_07_read_your_writes_test"
path = "tests/phase12_07_read_your_writes_test.rs"
required-features = ["testing"]

# ─── Plan 12-08 — apply-loop overhead reduction ─────────────────────────────
[[test]]
name = "phase12_08_busy_poll_test"
path = "tests/phase12_08_busy_poll_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_08_drain_until_empty_test"
path = "tests/phase12_08_drain_until_empty_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_08_response_batch_test"
path = "tests/phase12_08_response_batch_test.rs"
required-features = ["testing"]

[[test]]
name = "phase12_08_bytes_pool_test"
path = "tests/phase12_08_bytes_pool_test.rs"
required-features = ["testing"]

# ─── Plan 12.6-07 — legacy axum data-plane kill ──────────────────────────────
[[test]]
name = "phase12_6_legacy_axum_killed"
path = "tests/phase12_6_legacy_axum_killed.rs"

# ─── Plan 12.6-10 — mio-only architectural test (single hot-path entry) ─────
[[test]]
name = "phase12_6_mio_only_dataplane"
path = "tests/phase12_6_mio_only_dataplane.rs"

# ─── Phase 13.5.3 — no-set_var-in-beava-server/tests/ tripwire ──────────────
[[test]]
name = "phase13_5_3_no_env_var_pokes_in_tests"
path = "tests/phase13_5_3_no_env_var_pokes_in_tests.rs"

# ─── Plan 13.4-08 — OP_RESET test_mode gate (D-03) ───────────────────────────
[[test]]
name = "phase13_4_reset_gated_env_var"
path = "tests/phase13_4_reset_gated_env_var.rs"
required-features = ["testing"]

[[test]]
name = "phase13_4_reset_gated_programmatic"
path = "tests/phase13_4_reset_gated_programmatic.rs"
required-features = ["testing"]

[[test]]
name = "phase13_4_reset_default_rejected"
path = "tests/phase13_4_reset_default_rejected.rs"
required-features = ["testing"]

# ─── Plan 13.4.1 — Server-side wire-spec verb-style migration ────────────────
# Wave 1 RED tests (Plans 01 + 02 + 03). Plan 01 is the EXCLUSIVE Wave 1 owner
# of this Cargo.toml — registers ALL THREE [[test]] entries up front so Plans
# 02 + 03 (Wave 2) only need to author their own .rs test files without
# touching Cargo.toml. The .rs files for Plans 02 + 03 do not yet exist when
# Plan 01 lands; cargo only validates the test target when it is invoked, so
# this is safe — Plan 01's own test target (phase13_4_1_verb_style_get) ships
# with the corresponding .rs file in the same commit.
[[test]]
name = "phase13_4_1_verb_style_get"
path = "tests/phase13_4_1_verb_style_get.rs"
required-features = ["testing"]

[[test]]
name = "phase13_4_1_verb_style_batch_get"
path = "tests/phase13_4_1_verb_style_batch_get.rs"
required-features = ["testing"]

[[test]]
name = "phase13_4_1_entity_id_alias_warn"
path = "tests/phase13_4_1_entity_id_alias_warn.rs"
required-features = ["testing"]

[lib]
name = "beava_server"
path = "src/lib.rs"

[dependencies]
beava-core = { path = "../beava-core" }
beava-persistence = { path = "../beava-persistence" }
beava-runtime-core = { path = "../beava-runtime-core" }
mio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = "0.5"
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
# Plan 18-11: hot-path optimization deps (CompactString in match arms / row construction).
compact_str = { workspace = true }
smallvec = { workspace = true }
# Plan 18-06 follow-up: fast HashMap for event_id_index (was std::HashMap with SipHash).
hashbrown = { workspace = true }
fxhash = { workspace = true }
# Plan 18-13: bounded MPSC channel between IoPool worker threads (Senders) and
# the apply thread (Receiver). Replaces the per-tick `MioClient.parsed_requests`
# Vec batch publish + `IoPool::join_all` spin barrier with continuous event flow.
crossbeam-channel = "0.5"
# Plan 12-08 (D-A): pthread_self() on the apply thread for per-thread CPU
# accounting (test hooks); pthread_mach_thread_np / pthread_getcpuclockid in
# tests for actual CPU sampling.
libc = { workspace = true }
reqwest = { workspace = true, optional = true }
# Phase 13.5.3: TestServerBuilder uses `tempfile::tempdir()` for default
# WAL+snapshot dirs (kernel-guaranteed unique mkdtemp + RAII auto-cleanup
# when the TestServer drops). Gated behind the `testing` feature alongside
# reqwest because tempfile is only used inside `testing.rs`.
tempfile = { workspace = true, optional = true }

[dev-dependencies]
beava-runtime-core = { path = "../beava-runtime-core" }
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "signal", "time", "sync", "test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
criterion = { workspace = true }
# Plan 13.4-08 (D-03): serialise env-var-mutating tests in
# `phase13_4_reset_gated_*` since `std::env::set_var` is process-global.
serial_test = "3"

[[bench]]
name = "phase25_wire"
harness = false

[[bench]]
name = "phase12_07_read_path"
harness = false
required-features = ["testing"]

[[bench]]
name = "phase12_08_apply_loop"
harness = false
required-features = ["testing"]

[[bench]]
name = "phase12_09_msgpack_get"
harness = false
required-features = ["testing"]

# ─── Plan 12.6-11 — post-axum-kill apply microbench (perf-discipline gate) ───
# Drives ApplyShard::dispatch_wire_request_with_row through three concrete
# event shapes (simple counter, count_distinct/HLL, windowed 60s sum). Bench
# bootstrap is shared via benches/common.rs. See
# .planning/phases/12.6-v0-surface-reduction/12.6-11-PLAN.md.
[[bench]]
name = "phase12_6_post_axum_kill_apply"
harness = false

# ─── Plan 12.8-08 — memory-governance apply microbench (perf-discipline gate) ───
# Two cells covering Plan 12.8-03's cold-entity TTL check overhead on the
# apply hot path: cold_ttl_disabled (cold_after_ms = None — baseline; matches
# Phase 12.7 simple_counter shape) vs cold_ttl_enabled (cold_after_ms =
# Some(30d) — measures Option-is-some + last_seen_u64 HashMap lookup +
# update cost when TTL is set but no actual eviction fires). See
# .planning/phases/12.8-memory-governance/12.8-08-PLAN.md.
[[bench]]
name = "phase12_8_memory_gov_apply"
harness = false

# ─── Plan 13.4.1-05 Task 5.c — verb-style dispatch microbench (perf-discipline gate) ───
# Two cells covering Plan 13.4.1-04's migrated dispatch hot paths:
#   - dispatch_get_single_verb_style_sync (single-row, 1-feature filter)
#   - dispatch_batch_get_sync (10-entry batch × 1-feature filter; CT_JSON + CT_MSGPACK)
# The change is a serde shape flip (NEUTRAL-to-POSITIVE delta, covered by the
# throughput-baselines small/tcp gate); this bench is regression insurance
# per CLAUDE.md §Performance Discipline. See
# .planning/phases/13.4.1-server-wire-spec-verb-style-migration/13.4.1-05-PLAN.md.
[[bench]]
name = "phase13_4_1_dispatch_get_verb_style"
harness = false
required-features = ["testing"]
